# K_Data_project

./: 2분반 4조 모델링 제출용.ipynb  2분반 4조 전처리제출용.ipynb  README.md  전세사기raw데이터.xlsx  전세사기아닌raw데이터.xlsx  프로젝트 설명 + 활용방법.md
data_onair/: README.md  db.sqlite3  pyproject.toml
